[package]
name = "ok_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = {version = "1.16", features = ["full"]}
lazy_static = "1.4"
simple_excel_writer = "0.2.0"
async-recursion = "1.0.4"
clap = {version = "4.0", features = ["derive"]}